Fix template number & select quoting errors

--- a/source/_posts/2021-09-01-release-20219.markdown
+++ b/source/_posts/2021-09-01-release-20219.markdown
@@ -225,7 +225,7 @@ the WLED strip into their own entities.
 template:
   number:
     - name: "Example number: WLED effect speed"
-      state: "{{ (( state_attr("light.wled", "Speed") / 255) * 100) | round }}"
+      state: "{{ (( state_attr('light.wled', 'Speed') / 255) * 100) | round }}"
       min: 0
       max: 100
       set_value:
@@ -242,8 +242,8 @@ template:
 template:
   select:
     - name: "Example select: WLED effect"
-      state: "{{ state_attr("light.wled", "effect") }}"
-      options: "{{ state_attr("light.wled", "effect_list") }}"
+      state: "{{ state_attr('light.wled', 'effect') }}"
+      options: "{{ state_attr('light.wled', 'effect_list') }}"
       select_option:
         service: light.turn_on
         target:
